crates/solidity-v2/testing/snapshots/cst_output/UserDefinedValueTypeDefinition/bool/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.8'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/UserDefinedValueTypeDefinition/bool/input.sol:2:1]
   │
 2 │ type Foo is bool;
   │ ────────┬────────  
   │         ╰────────── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            UserDefinedValueTypeDefinition(
                UserDefinedValueTypeDefinitionStruct {
                    type_keyword: TypeKeyword {
                        range: 110..114,
                    },
                    name: Identifier {
                        range: 115..118,
                    },
                    is_keyword: IsKeyword {
                        range: 119..121,
                    },
                    value_type: BoolKeyword(
                        BoolKeyword {
                            range: 122..126,
                        },
                    ),
                    semicolon: Semicolon {
                        range: 126..127,
                    },
                },
            ),
        ],
    },
}
